--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.5",
+        "owen-it/laravel-auditing": "^13.0",
         "spatie/laravel-permission": "^5.8"
     },
     "require-dev": {
